--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby-plugin-sharp": "^2.2.1",
     "gatsby-plugin-sitemap": "^2.2.6",
     "gatsby-source-filesystem": "^2.1.0",
+    "gatsby-source-instagram": "^0.5.1",
     "gatsby-transformer-sharp": "^2.2.0",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
