--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "gatsby": "^2.10.0",
+    "gatsby": "^2.13.67",
     "gatsby-background-image": "^0.8.4",
     "gatsby-image": "^2.2.1",
     "gatsby-plugin-html-attributes": "^1.0.5",
@@ -18,6 +18,7 @@
     "gatsby-plugin-sitemap": "^2.2.6",
     "gatsby-source-filesystem": "^2.1.0",
     "gatsby-source-instagram": "^0.5.1",
+    "gatsby-transformer-remark": "^2.6.14",
     "gatsby-transformer-sharp": "^2.2.0",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
