--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@mdx-js/mdx": "^1.3.2",
+    "@mdx-js/react": "^1.3.2",
     "gatsby": "^2.13.67",
     "gatsby-background-image": "^0.8.4",
     "gatsby-image": "^2.2.1",
     "gatsby-plugin-html-attributes": "^1.0.5",
     "gatsby-plugin-manifest": "^2.2.5",
+    "gatsby-plugin-mdx": "^1.0.32",
     "gatsby-plugin-offline": "^2.2.0",
     "gatsby-plugin-react-helmet": "^3.1.0",
     "gatsby-plugin-robots-txt": "^1.5.0",
