--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby-background-image": "^0.8.4",
     "gatsby-image": "^2.2.1",
     "gatsby-plugin-html-attributes": "^1.0.5",
+    "gatsby-plugin-mailchimp": "^5.1.2",
     "gatsby-plugin-manifest": "^2.2.5",
     "gatsby-plugin-mdx": "^1.0.32",
     "gatsby-plugin-offline": "^2.2.0",
