--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.3.2",
     "@mdx-js/react": "^1.3.2",
+    "dotenv": "^8.1.0",
     "gatsby": "^2.13.67",
     "gatsby-background-image": "^0.8.4",
     "gatsby-image": "^2.2.1",
@@ -21,6 +22,7 @@
     "gatsby-plugin-sass": "^2.1.0",
     "gatsby-plugin-sharp": "^2.2.1",
     "gatsby-plugin-sitemap": "^2.2.6",
+    "gatsby-source-contentful": "^2.1.35",
     "gatsby-source-filesystem": "^2.1.0",
     "gatsby-source-instagram": "^0.5.1",
     "gatsby-transformer-remark": "^2.6.14",
