--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby": "^2.13.67",
     "gatsby-background-image": "^0.8.4",
     "gatsby-image": "^2.2.1",
+    "gatsby-plugin-google-analytics": "^2.1.16",
     "gatsby-plugin-html-attributes": "^1.0.5",
     "gatsby-plugin-mailchimp": "^5.1.2",
     "gatsby-plugin-manifest": "^2.2.5",
@@ -28,6 +29,8 @@
     "gatsby-source-instagram": "^0.5.1",
     "gatsby-transformer-remark": "^2.6.14",
     "gatsby-transformer-sharp": "^2.2.0",
+    "lodash.template": ">=4.5.0",
+    "mem": ">=4.0.0",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
@@ -35,9 +38,7 @@
     "react-helmet": "^5.2.1",
     "react-icons": "^3.7.0",
     "react-reveal": "^1.2.2",
-    "styled-components": "^4.3.2",
-    "mem": ">=4.0.0",
-    "lodash.template": ">=4.5.0"
+    "styled-components": "^4.3.2"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
