--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mdx-js/mdx": "^1.3.2",
     "@mdx-js/react": "^1.3.2",
     "dotenv": "^8.1.0",
+    "downloadjs": "^1.4.7",
     "gatsby": "^2.13.67",
     "gatsby-background-image": "^0.8.4",
     "gatsby-image": "^2.2.1",
