--- a/package.json
+++ b/package.json
@@ -5,44 +5,45 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@babel/plugin-proposal-object-rest-spread": "^7.8.0",
     "@contentful/rich-text-react-renderer": "^13.4.0",
-    "@mdx-js/mdx": "^1.3.2",
-    "@mdx-js/react": "^1.3.2",
-    "dotenv": "^8.1.0",
+    "@mdx-js/mdx": "^1.5.3",
+    "@mdx-js/react": "^1.5.3",
+    "dotenv": "^8.2.0",
     "downloadjs": "^1.4.7",
-    "gatsby": "^2.13.67",
-    "gatsby-background-image": "^0.8.4",
-    "gatsby-image": "^2.2.1",
-    "gatsby-plugin-google-analytics": "^2.1.16",
+    "gatsby": "^2.18.21",
+    "gatsby-background-image": "^0.8.19",
+    "gatsby-image": "^2.2.38",
+    "gatsby-plugin-google-analytics": "^2.1.32",
     "gatsby-plugin-html-attributes": "^1.0.5",
     "gatsby-plugin-mailchimp": "^5.1.2",
-    "gatsby-plugin-manifest": "^2.2.5",
-    "gatsby-plugin-mdx": "^1.0.32",
-    "gatsby-plugin-netlify": "^2.1.12",
-    "gatsby-plugin-offline": "^2.2.0",
-    "gatsby-plugin-react-helmet": "^3.1.0",
+    "gatsby-plugin-manifest": "^2.2.37",
+    "gatsby-plugin-mdx": "^1.0.67",
+    "gatsby-plugin-netlify": "^2.1.31",
+    "gatsby-plugin-offline": "^2.2.10",
+    "gatsby-plugin-react-helmet": "^3.1.21",
     "gatsby-plugin-robots-txt": "^1.5.0",
-    "gatsby-plugin-sass": "^2.1.0",
-    "gatsby-plugin-sharp": "^2.2.1",
-    "gatsby-plugin-sitemap": "^2.2.6",
-    "gatsby-source-contentful": "^2.1.35",
-    "gatsby-source-filesystem": "^2.1.0",
-    "gatsby-source-instagram": "^0.5.1",
-    "gatsby-transformer-remark": "^2.6.14",
-    "gatsby-transformer-sharp": "^2.2.0",
+    "gatsby-plugin-sass": "^2.1.27",
+    "gatsby-plugin-sharp": "^2.3.13",
+    "gatsby-plugin-sitemap": "^2.2.25",
+    "gatsby-source-contentful": "^2.1.76",
+    "gatsby-source-filesystem": "^2.1.46",
+    "gatsby-source-instagram": "^0.6.1",
+    "gatsby-transformer-remark": "^2.6.48",
+    "gatsby-transformer-sharp": "^2.3.12",
     "lodash.template": ">=4.5.0",
-    "mem": ">=4.0.0",
-    "node-sass": "^4.12.0",
+    "mem": "^6.0.1",
+    "node-sass": "^4.13.0",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
-    "react-icons": "^3.7.0",
+    "react-icons": "^3.8.0",
     "react-reveal": "^1.2.2",
-    "styled-components": "^4.3.2"
+    "styled-components": "^4.4.1"
   },
   "devDependencies": {
-    "prettier": "^1.18.2"
+    "prettier": "^1.19.1"
   },
   "keywords": [
     "gatsby"
